--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Products#index</h1>
 <p>Find me in app/views/products/index.html.erb</p>
 
+<div data-react-component='App' data-props="{}"></div>
+
 <% @strollers.each do |brand, strollers| %>
   <strong>Brand:</strong>
   <%= link_to brand.name, brand %>
