--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Products#index</h1>
 <p>Find me in app/views/products/index.html.erb</p>
 
-<%= render Search::ShowComponent.new(searchUrl: url_for(controller: 'products', action: 'search')) %>
+<%= render SearchProduct::ShowComponent.new(searchUrl: url_for(controller: 'products', action: 'search')) %>
 
 <% @strollers.each do |brand, strollers| %>
   <strong>Brand:</strong>
