--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
+<!--  <body class="bg-[url('/assets/bg.jpg')] bg-cover bg-center bg-no-repeat">-->
   <body>
-    <%= yield %>
+    <main class="container mx-auto px-5 flex h-screen w-screen relative font-sans">
+      <%= yield %>
+    </main>
   </body>
 </html>
