--- a/app/views/products/fits.html.erb
+++ b/app/views/products/fits.html.erb
@@ -1,31 +1,20 @@
-<h1>Does it Fit?</h1>
-<h2>
-  <span><%= @product.brand.name.capitalize %> - <%= @product.name %></span>
-</h2>
-<p>
-  type: <%= @product.productable_type.titleize %>
-</p>
-<p>
-  <a href='<%= @product.link %>'>link</a>
-</p>
+<%= render layout: 'shared/container' do %>
+  <div class="min-w-64">
+    <%= render partial: 'shared/hero', locals: { title: 'Does it fit?' } %>
 
-<%= render SearchComparisonProduct::ShowComponent.new(searchUrl: url_for(controller: 'products', action: 'search_comparison'), product: @product) %>
+    <div class="mt-8 flex">
+      <div class="p-8 w-full">
+        <%= render partial: 'products/main', locals: { product: @product } %>
+        <div class="mt-4 flex justify-center">
+          <%= render partial: 'shared/button', locals: { text: 'Choose another product', link: products_path, secondary: true } %>
+        </div>
+      </div>
+      <div class="p-8 w-full">
+        <%= render partial: 'shared/subtitle', locals: { text: 'Search for a product to compare:' } %>
+        <%= render SearchComparisonProduct::ShowComponent.new(searchUrl: url_for(controller: 'products', action: 'search_comparison'), product: @product) %>
+      </div>
+    </div>
 
-<h2>Choose another item to see if it fits</h2>
-<p>
-  <label for="other_product_id">
-    <%= select_tag 'other_product_id',
-                   options_for_select(
-                     @other_products.map { |product|
-                       ["#{product.productable_type}: #{product.brand.name} - #{product.name}", "#{product.slug}"]
-                     }, false),
-                   onchange: "navigateToFitProduct(this.value)"
-    %>
-  </label>
-</p>
-
-<script>
-    function navigateToFitProduct(slug) {
-        window.location.href = `${window.location.href}/${slug}`;
-    }
-</script>
+    <%= render partial: 'products/compatible_product_carousel', locals: { product: @product } %>
+  </div>
+<% end %>
