--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
   <head>
     <title>StrollerCompatibility</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -9,6 +9,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <%= turbo_include_tags %>
   </head>
 
 <!--  <body class="bg-[url('/assets/bg.jpg')] bg-cover bg-center bg-no-repeat">-->
