--- a/app/views/products/_image.html.erb
+++ b/app/views/products/_image.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="p-4">
   <img class="rounded-t-lg" src="<%= product.image_or_default.url %>" alt="<%= product.image_or_default.alt_text %>"/>
   <% if product.image_or_default.attribution_required? %>
     <p class="text-right text-gray-400 text-xs px-2">
