--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,8 +1,22 @@
 <div class="w-full">
   <div class="p-4">
     <h1 class="font-bold text-4xl">Import Products</h1>
-
     <%= form_with url: import_admin_products_path, local: true, multipart: true do |form| %>
+      <div class="flex flex-row">
+        <div>
+          <%= form.label :file, "CSV file" %>
+          <%= form.file_field :file %>
+        </div>
+        <div>
+          <%= form.submit "Import", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="p-4">
+    <h1 class="font-bold text-4xl">Import Products Matrix </h1>
+    <%= form_with url: import_matrix_admin_products_path, local: true, multipart: true do |form| %>
       <div class="flex flex-row">
         <div>
           <%= form.label :file, "CSV file" %>
@@ -20,8 +34,10 @@
     <thead>
     <tr>
       <th>ID</th>
+      <th>Slug</th>
       <th>Name</th>
-      <th>Price</th>
+      <th>Brand</th>
+      <th>Type</th>
       <th>Actions</th>
     </tr>
     </thead>
@@ -29,11 +45,14 @@
     <% @products.each do |product| %>
       <tr class="border-2 border-gray-200">
         <td><%= product.id %></td>
+        <td><%= product.slug %></td>
         <td><%= product.name %></td>
         <td><%= product.brand.name %></td>
         <td><%= product.productable_type %></td>
         <td class="flex">
-          <%= button_to 'Edit', edit_admin_product_path(product), method: :get, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-1" %>
+          <%= button_to 'Edit', edit_admin_product_path(product), method: :get,
+                        class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-1"
+          %>
           <%= button_to 'Delete', admin_product_path(product),
                         method: :delete,
                         form: { data: { turbo: true, turbo_confirm: 'are you sure?', turbo_method: :delete } },
