--- a/app/views/shared/_button.html.erb
+++ b/app/views/shared/_button.html.erb
@@ -1,3 +1,4 @@
+<% method = :get if method.nil? %>
 <div class="flex items-center justify-between">
   <% if local_assigns[:secondary] %>
     <% button_style = 'bg-white text-purple-800 border-purple-800 border-solid border-2' %>
@@ -8,7 +9,5 @@
     <% hover_style = 'hover:bg-purple-600' %>
     <% focus_style = 'focus:ring-blue-300' %>
   <% end %>
-  <a href="<%= link %>" class="<%= button_style %> <%= hover_style %> <%= focus_style %> focus:outline-none focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
-    <%= text %>
-  </a>
+  <%= button_to text, link, class: "#{button_style} #{hover_style} #{focus_style} focus:outline-none focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center", method: method %>
 </div>
