--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,32 +1,12 @@
 <div class="w-full">
   <div class="p-4">
     <h1 class="font-bold text-4xl">Import Products</h1>
-    <%= form_with url: import_admin_products_path, local: true, multipart: true do |form| %>
-      <div class="flex flex-row">
-        <div>
-          <%= form.label :file, "CSV file" %>
-          <%= form.file_field :file %>
-        </div>
-        <div>
-          <%= form.submit "Import", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
-        </div>
-      </div>
-    <% end %>
+    <%= render partial: 'admin/shared/file_upload_form', locals: { url: import_admin_products_path, id: 'import-products' } %>
   </div>
 
   <div class="p-4">
     <h1 class="font-bold text-4xl">Import Products Matrix </h1>
-    <%= form_with url: import_matrix_admin_products_path, local: true, multipart: true do |form| %>
-      <div class="flex flex-row">
-        <div>
-          <%= form.label :file, "CSV file" %>
-          <%= form.file_field :file %>
-        </div>
-        <div>
-          <%= form.submit "Import", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
-        </div>
-      </div>
-    <% end %>
+    <%= render partial: 'admin/shared/file_upload_form', locals: { url: import_matrix_admin_products_path, id: 'import-products-matrix' } %>
   </div>
 
   <h1 class="font-bold text-4xl">Admin::Products#index</h1>
