--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,7 +5,7 @@
 @layer base {
     @font-face {
         font-family: "JosefinSans";
-        src: url('/assets/JosefinSans-Regular.ttf');
+        src: url('JosefinSans-Regular.ttf');
         font-style: normal;
     }
 }
