--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StrollerCompatibility</title>
+  <title><%= Rails.env.development? ? '[Local] ' : '' %>StrollerCompatibility</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -14,6 +14,19 @@
 
 <body>
 <main class="container mx-auto px-5 flex h-screen w-screen relative font-sans">
+  <% if Rails.env.development? %>
+    <h1 id="local-mode-header"
+         class="fixed top-0 right-0 bg-yellow-500 text-black px-4 py-2 m-2 rounded-md shadow-md z-50">
+      <span>[Running Locally]</span>
+      <button onclick="hideLocalModeHeader()" class="ml-2 text-sm">×</button>
+    </h1>
+    <script>
+        function hideLocalModeHeader() {
+            document.getElementById('local-mode-header').style.display = 'none';
+        }
+    </script>
+  <% end %>
+
   <% flash.each do |message_type, message| %>
     <div id="flash-message" style="position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 1000; width: 80%; max-width: 600px;">
       <% alert_class = message_type == 'alert' ? 'alert-danger' : 'alert-warning' %>
