--- a/app/views/admin/brands/index.html.erb
+++ b/app/views/admin/brands/index.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Admin::Brands#index</h1>
-  <p>Find me in app/views/admin/brands/index.html.erb</p>
+  <%= render 'shared/table', collection: @brands, attributes: [:name, :website, :product_count], edit_path: 'edit_admin_brand_path', delete_path: 'admin_brand_path' %>
+  <h2>Total Product Count: <%= @total_product_count %></h2>
 </div>
