--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -3,7 +3,10 @@
     <h1 class="font-bold text-4xl">Import Products</h1>
     <div class="flex flex-row">
       <%= render partial: 'admin/shared/file_upload_form', locals: { url: import_admin_products_path, id: 'import-products' } %>
-      <%= link_to "Export To CSV", export_admin_products_path,
+      <%= link_to "Export Products To CSV", export_admin_products_path,
+                  class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mx-1"
+      %>
+      <%= link_to "Export Compatibility To CSV", export_compatible_admin_products_path,
                   class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mx-1"
       %>
     </div>
