--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -21,7 +21,11 @@
         <th>Link</th>
         <td class="flex items-center">
           <%= form.url_field :link, class: 'form-control' %>
-          <%= render CheckLink::ShowComponent.new(productId: @product.slug, checkLinkPath: check_link_admin_products_path) %>
+          <%= render CheckLink::ShowComponent.new(
+            productId: @product.slug,
+            checkLinkPath: check_link_admin_products_path,
+            updateProductURL: admin_product_url(@product),
+          ) %>
         </td>
       </tr>
       <% unless @product.image.nil? %>
