--- a/app/views/shared/_button.html.erb
+++ b/app/views/shared/_button.html.erb
@@ -9,5 +9,5 @@
     <% hover_style = 'hover:bg-purple-600' %>
     <% focus_style = 'focus:ring-blue-300' %>
   <% end %>
-  <%= button_to text, link, class: "#{button_style} #{hover_style} #{focus_style} focus:outline-none focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center", method: method %>
+  <%= button_to text, link, class: "#{button_style} #{hover_style} #{focus_style} focus:outline-none focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center", method: method, accesskey: local_assigns[:accesskey] %>
 </div>
