--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -21,6 +21,11 @@
         <th>Link</th>
         <td class="flex items-center">
           <%= form.url_field :link, class: 'form-control' %>
+          <a class="p-2 m-2 rounded-full bg-gray-200 text-gray-800 w-8 h-8 flex items-center justify-center hover:bg-gray-300 cursor-pointer"
+            href="<%= @product.link %>"
+          >
+            <i class="fa-solid fa-globe"></i>
+          </a>
           <%= render CheckLink::ShowComponent.new(
             productId: @product.slug,
             checkLinkPath: check_link_admin_products_path,
