--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -13,6 +13,29 @@
   </div>
 
   <h1 class="font-bold text-4xl">Admin::Products#index</h1>
+  <form action="<%= admin_products_path %>" method="get" class="mb-4">
+    <div class="flex flex-wrap items-center">
+      <div class="mr-2">
+        <input type="text" name="search" placeholder="Search products" class="px-2 py-1 border rounded">
+      </div>
+      <div class="mr-2">
+        <select name="type" class="px-2 py-1 border rounded">
+          <option disabled selected value="">Type</option>
+          <option value="Seat">Seat</option>
+          <option value="Stroller">Stroller</option>
+          <option value="Adapter">Adapter</option>
+        </select>
+      </div>
+      <div class="mr-2">
+        <div class="mr-2">
+          <input type="text" name="brand" placeholder="Search brand" class="px-2 py-1 border rounded">
+        </div>
+      </div>
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        Search
+      </button>
+    </div>
+  </form>
   <table class="table w-full">
     <thead>
     <tr>
